--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -173,7 +173,7 @@
         display: none;
     }
 
-    aside .sidebar {
+    aside .tab-buttons {
         background: white;
         display: flex;
         flex-direction: column;
@@ -186,7 +186,7 @@
         font-weight: 500;
     }
 
-    aside .sidebar a {
+    aside .tab-buttons a {
         display: flex;
         color: var(--color-info-dark);
         margin: 2rem;
@@ -197,40 +197,40 @@
         transition: all 300ms ease;
     }
 
-    aside .sidebar a span {
+    aside .tab-buttons a span {
         font-size: 1.6rem;
         transition: all 300ms ease;
     }
 
-    aside .sidebar a:last-child {
+    aside .tab-buttons a:last-child {
         position: absolute;
         bottom: 2rem;
         width: 100%;
     }
 
-    aside .sidebar a.active {
+    aside .tab-buttons a.active {
         background: var(--color-light);
         color: var(--color-primary);
         margin-left: 0;
     }
 
-    aside .sidebar a.active::before {
+    aside .tab-buttons a.active::before {
         content: '';
         width: 6px;
         height: 100%;
         background: var(--color-primary);
     }
 
-    aside .sidebar a.active span {
+    aside .tab-buttons a.active span {
         color: var(--color-primary);
         margin-left: calc(1rem- 3px);
     }
 
-    aside .sidebar a:hover {
+    aside .tab-buttons a:hover {
         color: var(--color-primary);
     }
 
-    aside .sidebar a:hover span {
+    aside .tab-buttons a:hover span {
         margin-left: 1rem;
     }
 
